--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             </div>
             <div class="col l3 s12">
                 <h5 class="link-header">Follow Me</h5>
-                <ul>
+                <ul class="logo-collection">
                   <li class="logo-link"><a href="#!"><i class="fa fa-twitter"></i></a></li>
                   <li class="logo-link"><a href="#!"></a><i class="fa fa-instagram"></i></li>
                   <li class="logo-link"><a href="#!"><i class="fa fa-github"></i></a></li>
