--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
       </div>
     </div>
     <ul class="green darken-1 sidenav v-nav" id="mobile-demo">
-      <li><a class="center-align white-text" href="#" target="_blank">home</a></li>
-      <li><a class="center-align white-text" href="#" target="_blank">About</a></li>
-      <li><a class="center-align white-text" href="#" target="_blank">Services</a></li>
-      <li><a class="center-align white-text" href="#" target="_blank">Portfolio</a></li>
-      <li><a class="center-align white-text" href="#" target="_blank">Blogs</a></li>
-      <li><a class="center-align white-text" href="#" target="_blank">Contact</a></li>
+      <li><a class="center-align white-text" href="#home" target="_blank">home</a></li>
+      <li><a class="center-align white-text" href="#about" target="_blank">About</a></li>
+      <li><a class="center-align white-text" href="#service" target="_blank">Services</a></li>
+      <li><a class="center-align white-text" href="#portfolio" target="_blank">Portfolio</a></li>
+      <li><a class="center-align white-text" href="#blog" target="_blank">Blogs</a></li>
+      <li><a class="center-align white-text" href="#contact" target="_blank">Contact</a></li>
     </ul>
     <!-- Showcase -->
     <div class="showcase container">
       <div class="row">
         <div class="col s12 main-text">
           <h1>I'm Andral Orelus</h1>
-          <h5> Web Developer <span>| Graphic Designer</span></h5>
+          <h5 class="ocupation"> Web Developer <span>| Graphic Designer</span></h5>
           <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi veritatis ut minima sapiente dolorem corporis tempora voluptatibus ipsa molestiae assumenda?</p>
           <br>
           <a href="#contact" class="btn btn-large green darken-2 white-text">Contact Me</a>
@@ -268,7 +268,7 @@
                 <h3 class="blog-title">11 reasons to why you should visit Miami</h3>
                 <h4 class="blog-date">Jun 16, 2019</h4>
                 <p class="blog-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus asperiores enim facere sapiente commodi, facilis illum nisi recusandae maiores quo. Officia, rerum! Neque, aspernatur aliquid!</p>
-                <a href="#" class="btn btn-large blog-btn white green-text text-darken-3 waves-effect waves-green">Read More</a>
+                <a href="#" class="btn blog-btn white green-text text-darken-3 waves-effect waves-green">Read More...</a>
               </div>
         </div>
         <div class="blog-content">
@@ -279,7 +279,7 @@
                 <h3 class="blog-title">11 reasons to why you should visit Miami</h3>
                 <h4 class="blog-date">Jun 16, 2019</h4>
                 <p class="blog-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus asperiores enim facere sapiente commodi, facilis illum nisi recusandae maiores quo. Officia, rerum! Neque, aspernatur aliquid!</p>
-                <a href="#" class="btn btn-large blog-btn white green-text text-darken-3 waves-effect waves-green">Read More</a>
+                <a href="#" class="btn blog-btn white green-text text-darken-3 waves-effect waves-green">Read More...</a>
               </div>
         </div>
         <div class="blog-content">
@@ -290,7 +290,7 @@
                 <h3 class="blog-title">11 reasons to why you should visit Miami</h3>
                 <h4 class="blog-date">Jun 16, 2019</h4>
                 <p class="blog-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus asperiores enim facere sapiente commodi, facilis illum nisi recusandae maiores quo. Officia, rerum! Neque, aspernatur aliquid!</p>
-                <a href="#" class="btn btn-large blog-btn white green-text text-darken-3 waves-effect waves-green">Read More</a>
+                <a href="#" class="btn blog-btn white green-text text-darken-3 waves-effect waves-green">Read More...</a>
               </div>
         </div>
       </div>
@@ -384,7 +384,7 @@
         </div>
         <div class="footer-copyright">
               <div class="container center">
-                <p class="copy">© 2014 Copyright All rights reserved | created by <span>Andral Orelus</span></p> 
+                <p class="copy">© 2019 Copyright All rights reserved | created by <span>Andral Orelus</span></p> 
               </div>
             </div>
       </div>
